# tunix

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1  CONTRIBUTING.md  Dockerfile  Dockerfile_sz  README.md  Untitled.ipynb  bench_weight_sync.py  build_docker.sh  cache_downloader.yaml  conftest.py  convert_orbax.py  count_rows.py  debug_logger.txt  debug_weight_sync.txt  docker_build_tag_pub_run.sh  download_qwen3.py  et --mixed  fft_simpo_alignment.py  full_grpo_kaggle_demo.ipynb  jobset.yaml  logs.txt  mem_analysis.py  mem_analysis2.py  my_notebook_code.py  obtain_credential.sh  plan.md  pyproject.toml  repro_mappings.py  reproduce_issue.py  requirements.txt  run_remote_pw.sh  simpo_only_alignment.py  tmpc31bw379  tmpmkxo4xsc  tmppcz0pudd  train_big_dataset.py  update_docker_pw.sh  (+7 more)
.gemini/: styleguide.md
.github/: CODEOWNERS  pull_request_template.md
.home/: .bashrc  .zshrc
docs/: agentic_rl.md  algorithms.md  api.md  conf.py  contributing.md  design.md  examples.md  gemma4_vision_port.md  index.md  intro.md  launching.md  metrics.md  models.md  performance.md  quickstart.md  reliability.md  rollout.md  talks.md
examples/: 01_basic_inference_example.ipynb  01_basic_inference_example_fixed.py  README.rst  Untitled.ipynb  dpo_demo.ipynb  dpo_demo_gemma3.ipynb  dpo_demo_gemma3_v2.ipynb  dpo_demo_gemma3_v3.ipynb  dpo_gemma.ipynb  grpo_demo.ipynb  grpo_demo_test.ipynb  grpo_gemma.ipynb  logit_distillation.ipynb  ppo_demo.ipynb  ppo_example.py  qlora_demo.ipynb  qlora_llama3_gpu.ipynb  qwen3_example.ipynb  qwen3_generate.py  vl_dpo_demo_gemma3.ipynb  vl_dpo_gemma3.ipynb  vlm_training.py
experimental/: compile_repro_sft.py  compile_repro_v5p.sh  compile_repro_v5p_docker.sh  deepswe-256-mlperf.yaml  deepswe-256.yaml  deepswe_epoch1_snapshot_20260723.txt  frozenlake_workload.yaml  gemma2_2b_grpo.yaml  good_gold_whitelist.jsonl  gsm8k_ablation_both_optax.yaml  gsm8k_ablation_both_stream.yaml  gsm8k_ablation_reduced.yaml  gsm8k_ablation_reduced_stream.yaml  gsm8k_ablation_unreduced.yaml  gsm8k_ablation_unreduced_profile.yaml  gsm8k_ablation_unreduced_stream.yaml  gsm8k_ablation_unreduced_stream_profile.yaml  gsm8k_packing_workload.yaml  gsm8k_refactor_optax.yaml  gsm8k_refactor_optax_pack.yaml  gsm8k_refactor_stream.yaml  gsm8k_refactor_stream_pack.yaml  gsm8k_refactor_stream_pack_256c.yaml  gsm8k_refactor_stream_pack_v5p.yaml  gsm8k_refactor_stream_pack_v6e.yaml  gsm8k_v6e_head.yaml  gsm8k_v6e_worker.yaml  gsm8k_workload.yaml  math_eval_test.py  math_workload.yaml  profile_v5p_docker.sh  profile_v5p_grad_accum.sh  (+21 more)
(+925 files in other folders)
