[project]
name = "tunix"
version = "0.0.1"
authors = [
  { name = "Tunix Developers", email = "tunix-dev@google.com" },
]
description = "A lightweight JAX-native LLM post-training framework."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jax",
  "jaxtyping",
  "flax @ git+https://github.com/google/flax.git",
  "sentencepiece",
  "tensorboardX",
  "tqdm",
  "datasets",
  "grain",
  "tensorflow",
  "kagglehub",
  "qwix @ git+https://github.com/google/qwix",
]


[project.urls]
Source = "https://github.com/google/tunix"

[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tunix*"]
